<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_retrieval_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/tv_retrieval_filepath"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            app:layout_constraintHorizontal_chainStyle="spread"
            android:id="@+id/btn_retrieval_localpic"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/local_picture"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/btn_retrieval_takepic"/>

        <Button
            android:id="@+id/btn_retrieval_takepic"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/take_picture"
            app:layout_constraintLeft_toRightOf="@id/btn_retrieval_localpic"
            app:layout_constraintRight_toRightOf="parent"
             />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tv_retrieval_filepath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_linearlayout_lines"
        android:gravity="center"
        android:hint="文件名" />

    <ImageView
        android:id="@+id/iv_retrieval_cropedimage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/placeholder"
        android:layout_margin="8dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_retrieval_upload"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_gravity="center"
        android:text="@string/retrieval_picture"
        android:enabled="false" />

</LinearLayout>