<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/retrieval_result_bar"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:background="@color/colorBtnNormal"
        />
    <Button
        android:id="@+id/btn_retrieval_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retrieval_result_start"/>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <ImageView
            android:id="@+id/iv_retrieval_result1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/placeholder"
            android:background="@drawable/shape_rectangle_black"
            />
        <TextView
            android:id="@+id/tv_retrieval_result_name1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="name"
            app:layout_constraintLeft_toRightOf="@id/iv_retrieval_result1"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_retrieval_result_description1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/iv_retrieval_result1"
            app:layout_constraintTop_toBottomOf="@id/tv_retrieval_result_name1"
            android:gravity="center"
            android:hint="description"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
    <ImageView
        android:id="@+id/iv_retrieval_result2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/placeholder"
        android:background="@drawable/shape_rectangle_black"
        />
    <TextView
        android:id="@+id/tv_retrieval_result_name2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="name"
        app:layout_constraintLeft_toRightOf="@id/iv_retrieval_result2"
        app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_retrieval_result_description2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/iv_retrieval_result2"
            app:layout_constraintTop_toBottomOf="@id/tv_retrieval_result_name2"
            android:gravity="center"
            android:hint="description"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">
        <ImageView
            android:id="@+id/iv_retrieval_result3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/placeholder"
            android:background="@drawable/shape_rectangle_black"

            />
        <TextView
            android:id="@+id/tv_retrieval_result_name3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="name"
            app:layout_constraintLeft_toRightOf="@id/iv_retrieval_result3"
            app:layout_constraintRight_toRightOf="parent"/>
        <TextView
            android:id="@+id/tv_retrieval_result_description3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/iv_retrieval_result3"
            app:layout_constraintTop_toBottomOf="@id/tv_retrieval_result_name3"
            android:gravity="center"
            android:hint="description"/>
    </android.support.constraint.ConstraintLayout>
    <Button
        android:id="@+id/btn_retrieval_result_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/retrieval_result_save"/>

</LinearLayout>